syntax = "proto3";

option csharp_namespace = "auth_service";

package auth;

// The auth service definition.
service AuthService {
  rpc Verify (Empty_Request) returns (Verify_Response);
  rpc Register (Register_Request) returns (Register_Response);
  rpc Login (Authentication_Request) returns (Authentication_Response);
}

message Empty_Request {

}

message Verify_Response {
  bool Verified = 1;
  string ErrorMessage = 2;
  string UserId = 3;
  UserRole UserRole = 4;
}

enum UserRole {
    Host = 0;
    Guest = 1;
};

message Error {
  string PropertyName = 1; 
  string ErrorMessage = 2;
}

message Authentication_Request {
  string Username = 1;
  string Password = 2;
}

message User {
  UserRole Role = 1;
  string Username = 2;
  string FirstName = 3;
  string LastName = 4;
  string Email = 5;
  string LivingPlace = 6;
}

message Authentication_Response {
  string Token = 1;
  bool Success = 2;
  string ErrorMessage = 3;
  User User = 4;
}

message Register_Request {
  UserRole Role = 1;
  string Username = 2;
  string Password = 3;
  string FirstName = 4;
  string LastName = 5;
  string Email = 6;
  string LivingPlace = 7;
}

message Register_Response {
  bool Success = 1;
  string Token = 2;
  repeated Error errors = 3;
  string Message = 4;
}
